# arabic-diacritizer-public-release

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/diacritize/: __init__.py  __main__.py  cache.py  cli.py  config.py  evaluate.py  pipeline.py  tokenizer.py  unicode_utils.py
src/diacritize/assets/: bilstm_best.pt
src/diacritize/baseline/: model.py
tests/: test_baseline_model.py  test_cache.py  test_config.py  test_evaluate.py  test_tokenizer.py  test_unicode_utils.py
