[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-diacritizer"
version = "1.0.0"
description = "Arabic diacritization using BiLSTM + attention with sentence caching — 6.6% DER, beating GPT-5.3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Zain Mahmood" }]
keywords = ["arabic", "diacritization", "tashkeel", "nlp", "bilstm", "deep-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/Z-Mahmood/arabic-diacritizer-public-release"
Repository = "https://github.com/Z-Mahmood/arabic-diacritizer-public-release"

[project.scripts]
diacritize = "diacritize.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
diacritize = ["assets/*.pt", "assets/*.json.gz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
